--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -1,8 +1,12 @@
 name: Build and Push Docker Image
 
+# Conditional builds: Only triggers when crawler files or workflow itself changes
 on:
   push:
     branches: [ main ]
+    paths:
+      - 'crawler/**'
+      - '.github/workflows/build-and-push.yml'
   workflow_dispatch:
 
 env:
