Fix data directory mounting issue for server deployment
- Fix volume mapping path in production compose file
- Add data directory creation step to deployment guide
- Add quick start commands section
- Ensure data directory exists before running crawler

--- a/docker/compose.prod.yaml
+++ b/docker/compose.prod.yaml
@@ -33,5 +33,5 @@ services:
       - WINDOW_WIDTH=${WINDOW_WIDTH:-1920}
       - WINDOW_HEIGHT=${WINDOW_HEIGHT:-1080}
     volumes:
-      - ./data:/app/data
+      - ../data:/app/data
     restart: "no"
